// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="cf-card__section cf-card__section--default"
>
  CardSection
</div>
`;

exports[`should render with status 1`] = `
<div
  className="cf-card__section cf-card__section--error"
>
  CardSection
</div>
`;
